# vtkboolTest

./: CMakeLists.txt  Data0-Union.stl  Data3-Crash.stl  ExtrusionContour.stl  ExtrusionDiffImg.stl  InvalidStrip-Data0.stl  InvalidStrip-Data1.stl  Name.stl  README.md  Result_Extrusion.stl  vtkBoolTest.cpp
