CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(vtkBoolTest)
FIND_PACKAGE(VTK REQUIRED)
INCLUDE_DIRECTORIES(vtkbool)
ADD_SUBDIRECTORY(vtkbool)
SET(ExeName vtkBoolTest)
INCLUDE_DIRECTORIES(${Project_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${VTK_DIR})
ADD_EXECUTABLE(${ExeName} vtkBoolTest.cpp)
TARGET_LINK_LIBRARIES(${ExeName} ${VTK_LIBRARIES} vtkbool)
VTK_MODULE_AUTOINIT(TARGETS ${ExeName} MODULES ${VTK_LIBRARIES})
